# toadies

./: .gitignore  pyproject.toml  toady_registry.toml
docs/: toadette-distribution-diagram.html
docs/superpowers/specs/: 2026-06-23-toadies-distribution-layer-design.md  2026-06-23-toadies-trust-loop-design.md  2026-06-24-bouncer-v2-advisory-tunable-design.md
localai/: RECOVERY.md  docker-compose.yml
localai/caddy/: Caddyfile
tests/: test_accountant.py  test_bouncer.py  test_cli.py  test_config.py  test_dataset.py  test_dispatch.py  test_gremlin.py  test_interjection.py  test_localai.py  test_mcp_server.py  test_registry.py  test_reviewer.py  test_store.py  test_tools.py  test_trust.py
toadies/: __init__.py  accountant.py  bouncer.py  cli.py  config.py  dataset.py  dispatch.py  gremlin.py  interjection.py  localai.py  mcp_server.py  registry.py  reviewer.py  schema.sql  store.py  tools.py  trust.py
