[project]
name = "toadies"
version = "0.0.1"
description = "Local-first budget/context/safety sidecar for Codex (Robot). MVP: the Gremlin log-compressor."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
toadiectl = "toadies.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["toadies*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
